--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -17,14 +17,12 @@
    "source": [
     "<div style='text-align: justify'>\n",
     "In this notebook, we will manipulate raw data of covid19 as per the requirement of our case study. We want to perform the statistical test, ANOVA on our formulated hypothesis such as difference in number of covid19 cases across the different regions are significant.\n",
-    "So, we will aggregate the data into four different regions based on the continents and consider the 20 countries from each regions for our case study. Data has been collected on 9th May 2020 from Johns Hopkins University.\n",
+    "So, we will aggregate the data into four different regions based on the continents and consider the 20 countries from each regions for our case study. Data has been collected on 10th May 2020 from Johns Hopkins University.\n",
     "</div>\n",
     "\n",
     "Data Source: [Covid19 data Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19)\n",
     "\n",
-    "[]()\n",
-    "\n",
-    "Follow [notebook case_study](case_study.ipynb) for statistical test"
+    "Follow notebooks [confirmed_cases](confirmed_cases.ipynb) and [fatality_cases](fatality_cases.ipynb) for statistical test"
    ]
   },
   {
